--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -612,7 +612,7 @@ nav.nav-centered.outOfSight .logo{ display: none; }
 /*!---------- 9. ALERTS ----------*/
 
 .alert{ margin-bottom: 24px; background: none; border-radius: 0; font-weight: 600; padding: 12px 16px; }
-.alert .close{ opacity: 1; font-size: 24px; top: -2px; right: -4px; .transition(0.3s); }
+.alert .close{ opacity: 1; font-size: 24px; top: -2px; right: -4px; .transition(0.3s); z-index: 1;}
 .alert .close span{ font-weight: 400; }
 .alert-warning{ border: 1px solid #d88519; color: #d88519; }
 .alert-success{ border: 1px solid #47b475; color: #47b475; }
@@ -5639,8 +5639,10 @@ div.question-body .modal-container.left {
 	border: none;
 }
 .alert {
+	/*
 	border-bottom: 1px solid gray;
 	margin-bottom: 0;
+	*/
 }
 
 div.alert:last-child {
