--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -432,7 +432,7 @@ nav.bg-dark .logo-dark{ display: none; }
 .has-dropdown{ padding-right: 18px; }
 .has-dropdown:after{ position: absolute; top: 0; right: 0; font-size: 11px; content: "\e64b"; font-family: 'themify'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; }
 
-.menu{ position: relative; width: 100%; height: @nav-height; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; }
+.menu{ margin-bottom: 15px; position: relative; width: 100%; height: @nav-height; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; }
 .menu.inline-block{ width: auto; }
 .menu li a{ position: relative; font-size: 15px; text-transform: uppercase; font-weight: 400; letter-spacing: 1px; color: @bg-dark; opacity: 0.5; .transition(0.3s); max-width: 100%; white-space: normal; }
 .menu li a:hover{ opacity: 1 !important; }
