--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -1529,7 +1529,11 @@ body.soon-page{
     margin-bottom: 20px;
 }
 
-
+@media all and (max-width: 1600px) {
+    .curved-image-rmw {
+        bottom: -190px;
+    }
+}
 
 
 
