changed lazy loader display setting with overring display important tag

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -2665,7 +2665,7 @@ img.blog-icon {
 	color: #5E5E5C;
 }
 .mob-block {
-	display: none;
+	display: none !important;
 }
 .referral-works {
 	width: 33%;
@@ -2707,7 +2707,7 @@ img.blog-icon {
 }
 .visible570,
 .visible990 {
-	display: none;
+	display: none !important;
 }
 h1.uppercase {
 	letter-spacing: 1px;
@@ -2860,7 +2860,7 @@ h1.uppercase {
 		padding-right: 190px;
 	}
 	.mob-none {
-		display: none;
+		display: none !important;
 	}
 
 	.nofloat-mob {
@@ -2948,7 +2948,7 @@ h1.uppercase {
 		width: 90%;
 	}
 	.mob-block {
-		display: block;
+		display: block !important;
 	}
 	.ref2 {
 		background-position: 17px 15px;
@@ -3061,7 +3061,7 @@ h1.uppercase {
 		width: 100%;
 	}
 	.center-cont img {
-		display: none;
+		display: none !important;
 	}
 }
 
@@ -3126,10 +3126,10 @@ h1.uppercase {
 }
 @media all and (max-width: 570px) {
 	.curved-image-rb {
-		display: none;
+		display: none !important;
 	}
 	.visible570 {
-		display: block;
+		display: block !important;
 		right: -41px;
 		top: -60px;
 	}
@@ -3491,7 +3491,7 @@ img.fashion-icon {
 
 @media all and (max-width: 990px) {
 	.visible990 {
-		display: block;
+		display: block !important;
 	}
 	.mobile-red-img {
 		-o-transform: rotate(6deg);
@@ -3611,7 +3611,7 @@ img.fashion-icon {
 
 @media all and (max-width: 730px) {
 	.mob-red-pos1 {
-		display: none;
+		display: none !important;
 	}
 	.team-page .team-first-text.half {
 		text-align: left;
