right-image0team added display none important

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -3590,7 +3590,7 @@ img.fashion-icon {
 		width: 459px;
 	}
 	.right-image-team {
-		display: none;
+		display: none !important;
 	}
 	.get-on-board.container {
 		width: 100%;
