--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -1403,7 +1403,7 @@ video{ max-width: 100%; }
 .masonry.fadeIn{ opacity: 1; .translateY(0); }
 .masonry-item{ max-width: 100%; }
 .container .masonry-item{ margin-bottom: 30px;  }
-.container .masonry-item > div{ box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.11); }
+.container .masonry-item > div{ box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.01), 0 6px 20px 0 rgba(0, 0, 0, 0.08); }
 .masonry-item blockquote:hover{ background: @color-primary; .transition(0.3s); color: #fff; }
 .masonryFlyIn .masonry-item{ opacity: 0; .translateY(50px); }
 .masonryFlyIn .masonry-item.fadeIn{ opacity: 1; .translateY(0); }
@@ -5624,9 +5624,9 @@ div.question-body .modal-container.left {
 }
 
 .section-blog .arrow-style {
-	background: #fffafa;
+	background: #fefefd;
 	.bottom-part {
-		background: #fffafa;
+		background: #fefefd;
 	}
 }
 .section-blog.inner-blog .arrow-style {
