--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -1033,8 +1033,8 @@ table.notifications-table>tbody>tr>td a{
     color: #47b475;
 }
 .btn-filled:visited:hover, .btn-filled:hover {
-    color: #47b475;
-    background-color: #FFFFFF;
+    color: #FFFFFF;
+    background-color: #40A269;
 }
 .btn-filled.blue-button:hover {
     color: #1894EB;
@@ -1189,6 +1189,7 @@ span.text-red{
 }
 .inner-article .post-title h4{
     font-size: 35px;
+    line-height: 1.2;
 }
 .inner-article .post-snippet img{
     max-height: 500px;
