--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -4260,7 +4260,8 @@ p.discount span.round {
 			margin-bottom: 29px;
 		}
 		.btn-filled:visited:hover, .btn-filled:hover {
-			background: #FF2353;
+			background: #da163e;
+			border: 2px solid #da163e;
 			color: white;
 		}
 	}
@@ -4923,6 +4924,10 @@ VOUCHERS
 		margin-bottom: 24px;
 		border: 2px solid #47b475;
 		background: #47b475;
+		&:hover{
+			background: #40A269;
+			border: 2px solid #40A269;
+		}
 	}
 	.credits .pricing-table input[type="text"] {
 		color: black;
