--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -1191,6 +1191,22 @@ span.text-red{
     font-size: 35px;
     line-height: 1.2;
 }
+@media all and (max-width: 500px) {
+    .inner-article .post-title h4 {
+        font-size: 30px;
+        line-height: 1em;
+    }
+}
+@media all and (max-width: 400px) {
+    .inner-article .post-title h4 {
+        font-size: 27px;
+    }
+}
+@media all and (max-width: 360px) {
+    .inner-article .post-title h4 {
+        font-size: 24px;
+    }
+}
 .inner-article .post-snippet img{
     max-height: 500px;
     width: auto;
