added signature and intended route option

--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -823,12 +823,12 @@ div.center-cropped {
 }
 
 div.center-cropped img {
-    max-width: none !important;
+    max-width: 100%;
     position:absolute;
     margin: auto;
     min-height: 100%;
     min-width: 100%;
-    top: 0 !important;
+    top: 0;
     left: 0;
 }
 
