--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5237,18 +5237,84 @@ html {
 	}
 
 }
+.about-block.on-black.blog.consultants-head {
+	margin: 150px auto;
+	text-align: center;
+}
 
+.consultants-head .stylists-icon {
+	width: 200px;
+}
+.time-back {
+	background: url("../images/clock-icon.svg") left center no-repeat;
+	padding-left: 48px;
+	background-size: 40px;
+}
 
+@media all and (max-width:990px) {
+	.about-block.on-black.blog.consultants-head {
+		width: 100%;
+	}
+	.about-block h3.uppercase.blog-head {
+		line-height: 1.2em;
+		font-size: 40px;
+	}
+}
 
+@media all and (max-width:800px) {
+	.about-block.on-black.blog.consultants-head {
+		margin: 115px auto;
+	}
+	.container.our-stylists {
+		padding: 0;
+		width: 100%;
+	}
+	.about-block h3.uppercase.blog-head {
+		font-size: 36px;
+	}
+	.consultants-head .stylists-icon {
+		width: 160px;
+	}
+}
+@media all and (max-width:480px) {
+	.about-block h3.uppercase.blog-head {
+		font-size: 30px;
+	}
+}
+.center-cont.consultant {
+	width: 85%;
+	.about-block {
+		width: 87%;
+	}
+}
+.consultant {
+	.width14 {
+		width: 13%;
+		border-radius: 50%;
+	}
+}
+.padleft25 {
+	padding-left: 25px;
+}
+@media all and (max-width:990px) {
+	.center-cont.consultant .about-block,
+	.center-cont.consultant {
+		width: 100%;
+		padding: 0;
+	}
+	.consultant .width14 {
+		width: 19%;
+	}
 
-
-
-
-
-
-
-
-
+}
+@media all and (max-width: 679px) {
+.center-cont.consultant img {
+	display: block !important;
+}
+	.consultant .width14 {
+		width: 135px;
+	}
+}
 
 
 
