blog fix + headers

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -3221,10 +3221,10 @@ h1.uppercase {
 @media all and (max-width:435px) {
 	.about-block h4.uppercase.padright60on410 {
 		padding-right: 20px;
-	}
+	}/*
 	.nav-is-overlay .page-title-4.image-bg:first-child {
 		height: 170px;
-	}
+	}*/
 	.first-about-block .about-block.mt56,
 	.about-block img.bigger-image {
 		margin-top: 0;
@@ -4724,7 +4724,7 @@ SUMMARY
 	.col-md-9 {
 		padding: 0;
 	}
-	.row {
+	.summary-profile .row {
 		margin: 0;
 	}
 }
@@ -5315,6 +5315,49 @@ html {
 		width: 135px;
 	}
 }
+
+/************ HEADERS FIX **********/
+
+.profile-page .page-title-4,
+.page-title-4 {
+	height: auto;
+}
+.page-title .container {
+	transform: none !important;
+}
+.profile-page .page-title-4 {
+	padding-top: 0;
+}
+.page-title .page-first-header {
+	margin-top: 110px;
+	margin-bottom: 20px;
+}
+@media all and (max-width: 1366px) {
+	.page-title .page-first-header {
+		margin-top: 90px;
+	}
+}
+
+@media all and (max-width: 435px) {
+	.page-title .page-first-header {
+		margin-top: 78px;
+		margin-bottom: 0px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
