changed homepage scroll fix

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -5213,7 +5213,7 @@ html {
 .slideout-panel {
 	position:relative;
 	z-index: 1;
-	will-change: transform;
+	/*will-change: transform;*/
 }
 
 .slideout-open,
