added title header padding to

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -4005,6 +4005,9 @@ span.color-blue-prof {
 
 }
 
+.page-title .page-first-header {
+	padding-top: 110px;
+}
 
 @media all and (max-width: 1200px) {
 	.profile-page .fs19 {
