removed transition from background

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -2279,9 +2279,9 @@ ABOUT
 	background: #292929;
 	background-size: 300px;
 	background-position: 50% 50% !important;
-	transition: all 0.3s ease;
+	/*transition: all 0.3s ease;
 	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;*/
 	background-image: url("../images/pattern.jpg");
 	background-repeat: repeat;
 	transform: translate3d(0px, 0px, 0px);
