--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -2278,13 +2278,13 @@ ABOUT
 	z-index: 0;
 	background: #292929;
 	background-size: 300px;
-	background-position: 50% 50% !important;
-	/*transition: all 0.3s ease;
+	/*background-position: 50% 50% !important;
+	transition: all 0.3s ease;
 	-webkit-transition: all 0.3s ease;
 	-moz-transition: all 0.3s ease;*/
 	background-image: url("../images/pattern.jpg");
 	background-repeat: repeat;
-	transform: translate3d(0px, 0px, 0px);
+	/*transform: translate3d(0px, 0px, 0px);*/
 }
 .background-image-holder-about:before {
 	position: absolute;
